testing: add docs for auth routes
