# public/static/swagger-openapi.json
@@ -23,25 +23,32 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/AuthResponse"
+                }
+              }
+            }
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Failed response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/ApiErrorResponse"
+                }
+              }
+            }
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/AuthRequest"
               }
             }
           }
@@ -57,25 +64,32 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/AuthResponse"
+                }
+              }
+            }
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Failed response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/ApiErrorResponse"
+                }
+              }
+            }
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/AuthRequest"
               }
             }
           }
@@ -582,6 +596,68 @@
     }
   },
   "components": {
+    "AuthUser": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uuid",
+          "example": "d741861a-3967-4503-90f2-afc8ee45fef8"
+        },
+        "name": {
+          "type": "string",
+          "example": "john"
+        },
+        "email": {
+          "type": "string",
+          "format": "email",
+          "example": "john@doe.test"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time",
+          "example": "2023-03-06T09:13:23.522Z"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time",
+          "example": "2023-03-06T09:13:23.522Z"
+        }
+      }
+    },
+    "AuthRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "format": "email",
+          "description": "User email address.",
+          "example": "john@doe.test"
+        },
+        "password": {
+          "type": "string",
+          "format": "password",
+          "description": "User password.",
+          "example": "123456"
+        }
+      }
+    },
+    "AuthResponse": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string",
+          "description": "User auth token.",
+          "example": "dfdg.wertdf.wewetsfdfg"
+        },
+        "user": {
+          "$ref": "#/components/AuthUser"
+        }
+      }
+    },
+    "ApiErrorResponse": {
+      "type": "object"
+    },
     "securitySchemes": {
       "accessHeader": {
         "type": "apiKey",
