# src/domains/auth/auth.router.ts
@@ -9,7 +9,39 @@ class AuthRouter extends AbstractRouter {
 
   init(): void {
     this.router.post('/signin', async (req: Request, res: Response) => {
-      // #swagger.tags = ['Authentication']
+      /*
+        #swagger.tags = ['Authentication']
+        #swagger.requestBody = {
+          required: true,
+          content: {
+            'application/json': {
+              schema: {
+                $ref: '#/components/AuthRequest'
+              }
+            }
+          }
+        }
+        #swagger.responses[200] = {
+          description: 'Successful response',
+          content: {
+            'application/json': {
+              schema: {
+                $ref: '#/components/AuthResponse'
+              }
+            }
+          }
+        }
+        #swagger.responses[400] = {
+          description: 'Failed response',
+          content: {
+            'application/json': {
+              schema: {
+                $ref: '#/components/ApiErrorResponse'
+              }
+            }
+          }
+        }
+      */
       try {
         const data = await this.repo.signIn(req.body.email, req.body.password);
         res.status(200).json(data);
@@ -19,7 +51,39 @@ class AuthRouter extends AbstractRouter {
     });
 
     this.router.post('/signup', async (req: Request, res: Response) => {
-      // #swagger.tags = ['Authentication']
+      /*
+        #swagger.tags = ['Authentication']
+        #swagger.requestBody = {
+          required: true,
+          content: {
+            'application/json': {
+              schema: {
+                $ref: '#/components/AuthRequest'
+              }
+            }
+          }
+        }
+        #swagger.responses[200] = {
+          description: 'Successful response',
+          content: {
+            'application/json': {
+              schema: {
+                $ref: '#/components/AuthResponse'
+              }
+            }
+          }
+        }
+        #swagger.responses[400] = {
+          description: 'Failed response',
+          content: {
+            'application/json': {
+              schema: {
+                $ref: '#/components/ApiErrorResponse'
+              }
+            }
+          }
+        }
+      */
       try {
         const data = await this.repo.signUp(req.body.email, req.body.password);
         res.status(200).json(data);
